# cxx_playground

./: .gitignore  LICENSE  README.md  asm.tar.zst  nix.tar.zst
boost_test/: CMakeLists.txt
boost_test/src/: main.cpp
cpputils/: README.md  packages.manifest  repositories.manifest
cpputils/.bdep/: bdep.sqlite3
cpputils/eh/: README.md  manifest
cpputils/fp/: README.md  manifest
cpputils/fs/: README.md  manifest
cpputils/net/: README.md  manifest
cpputils/utils/: README.md  manifest
file_io/: README.md  compilation_db.json  manifest  repositories.manifest
file_io/.bdep/: bdep.sqlite3
file_io/file_io/: buildfile  file_io  file_io.cxx
hashing/: README.md  manifest  optimized  repositories.manifest
hashing/hashing/: build2file  hashing  hashing.cxx
healthmanagementapi/: shell.nix
healthmanagementapi/src/: CMakeLists.txt  api_patient.cc  api_patient.h  api_rest.cc  api_rest.h  build.ninja
learn/relearn/: README.md  manifest  repositories.manifest
libalgods/: README.md  packages.manifest  repositories.manifest
libalgods/.bdep/: bdep.sqlite3
libalgods/algo/: README.md  manifest
libalgods/ds/: README.md  manifest
libcpputils/: README.md  buildfile  manifest  repositories.manifest
libcpputils/.bdep/: bdep.sqlite3
libcpputils/libcpputils/: buildfile  cpputils.cxx  export.hxx  version.hxx.in
libecblock/: README.md  packages.manifest  repositories.manifest
libecblock/.bdep/: bdep.sqlite3
libecblock/libec/: README.md  manifest
liberrors/: README.md  manifest  repositories.manifest
liberrors/.bdep/: bdep.sqlite3
liberrors/liberrors/: buildfile  errors.cxx  errors.hxx  export.hxx  signal.cxx  version.hxx  version.hxx.in
libmodular/: Doxyfile  README.md  buildfile  core  manifest  repositories.manifest
libmodular/.bdep/: bdep.sqlite3
libmodular/html/: assertion_8hxx_source.html  contract_8hxx_source.html  dir_3d9caa16630d2f48da0e485ecab7441d.html  dir_3d9caa16630d2f48da0e485ecab7441d.js  files.html  files_dup.js  graph_legend.html  index.html  modular_8hxx.html  modular_8hxx.js  modular_8hxx__incl.map  modular_8hxx__incl.md5  modular_8hxx_source.html  namespacemembers.html  namespacemembers_func.html  namespacemodular.html  namespaces.html  namespaces_dup.js  navtreedata.js
not_module/: README.md  manifest  repositories.manifest
oatcmake/: .clang-format  CMakeLists.txt
oatcmake/src/: main.cpp
opengl/: README.md  manifest  repositories.manifest
qt5/: CMakeLists.txt
qtasyncnetwork/: CMakeLists.txt
qtasyncnetwork/src/: main.cpp
qtcallback/: .clang-tidy  CMakeLists.txt
read_sort/: README.md  manifest  repositories.manifest
scratch/: README.md  manifest  repositories.manifest
template/: README.md  manifest  repositories.manifest
type_erasure/: README.md  manifest  repositories.manifest  type_erasure.plist
wx/: CMakeLists.txt
wx/src/: main.cpp
(+200 files in other folders)
